--- a/src/app/monstruos/monstruos.component.html
+++ b/src/app/monstruos/monstruos.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-  <h1>Monstruos</h1>
+  <div class="row">
+    <div class="col"> <h1>Monstruos</h1></div>
+    <div class="d-flex justify-content-end col"><app-especies (mostrarEspecie)="getEspecieSeleccionada($event)"></app-especies></div>
+  </div>
+  
+ 
   <hr>
   <br>
   <app-monstruo *ngFor="let m of monstruos.body"
