--- a/src/app/monstruos/monstruos.component.html
+++ b/src/app/monstruos/monstruos.component.html
@@ -1,15 +1,17 @@
 <div class="container">
-  <div class="row">
-    <div class="col"> <h1>Monstruos</h1></div>
-    <div class="d-flex justify-content-end col"><app-especies (mostrarEspecie)="getEspecieSeleccionada($event)"></app-especies></div>
+  <div class="row justify-content-center align-items-center g-2">
+    <div class="col"> 
+      <h1>
+        Monstruos
+      </h1>
+    </div>
   </div>
-  
- 
   <hr>
   <br>
-  <app-monstruo *ngFor="let m of monstruos.body"
+    <app-monstruo *ngFor="let m of monstruos.body"
     [monstruo] = "m"
     [indice] = "m._id">
-  </app-monstruo>
+    </app-monstruo>
+  
 </div>
 
